<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="25sp"
    android:background="@drawable/gradient_bg"
    tools:context=".AddItemFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_item_details"
        android:fontFamily="@font/lobster"
        android:textSize="40sp"
        android:textColor="@color/grey"
        android:layout_marginBottom="20sp"
        android:gravity="center"
        android:textStyle="bold"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="20sp"
        app:boxCornerRadiusTopStart="20sp"
        app:boxCornerRadiusTopEnd="20sp"
        app:boxCornerRadiusBottomStart="20sp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:hint="@string/enter_item_name"
            android:id="@+id/item_name"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="20sp"
        app:boxCornerRadiusTopStart="20sp"
        app:boxCornerRadiusTopEnd="20sp"
        app:boxCornerRadiusBottomStart="20sp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:inputType="number"
            android:layout_marginBottom="20sp"
            android:hint="@string/enter_item_price"
            android:id="@+id/item_price"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Switch
        android:id="@+id/availability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/available"
        android:textSize="20sp"
        android:textColor="@color/grey"
        android:fontFamily="@font/lobster"
        android:layout_gravity="center"
        android:layout_marginBottom="20sp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lobster"
        android:backgroundTint="@color/button_color_2"
        android:text="@string/add"
        android:id="@+id/add_item_button"/>

</LinearLayout>