<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/button_color_1"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="20sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15sp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_name"
                android:fontFamily="@font/lobster"
                android:textColor="@color/grey"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/recycler_item_name"
                android:layout_width="240sp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lobster"
                android:textColor="@color/grey"
                android:textSize="25sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_price"
                android:textColor="@color/grey"
                android:fontFamily="@font/lobster"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/recycler_item_price"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/grey"
                android:fontFamily="@font/lobster"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/edit_item_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lobster"
                android:textColor="@color/button_color_1"
                android:backgroundTint="@color/button_color_2"
                android:text="@string/edit"
                android:layout_marginLeft="190sp"/>

        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>